--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>MyPortfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -25,7 +25,7 @@
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <!-- <li><a href="#teams" class="menu-btn">Teams</a></li> -->
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -39,9 +39,9 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Anish kumar</div>
+                <div class="text-2">Marc arnol Saddefo Takoukam</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="#contact">Hire me</a>
             </div>
         </div>
     </section>
@@ -52,16 +52,48 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/profile.jpeg" alt="profile">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Anish kuamr and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Marc arnol Saddefo Takoukam and I'm a <div></div><span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
                     <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
     </section>
+
+     <!-- services section start -->
+     <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">My services</h2>
+            <div class="serv-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Web Design</div>
+                        <p>As a Web Designer, I specialize in crafting impactful and functional websites. My passion for intuitive user interface design results in engaging online experiences that enhance my clients' presence on the web. With a collaborative and customized approach, I strive to translate visions into digital realities, delivering tailor-made solutions that exceed expectations.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="text">Web development</div>
+                        <p>As a Web Developer, I specialize in bringing digital visions to life through code. With expertise in front-end and back-end development, I create dynamic and responsive websites that not only look great but also function flawlessly across devices. From crafting clean and efficient code to integrating cutting-edge technologies, I am dedicated to delivering robust web solutions that elevate user experiences and drive online success</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Apps Design</div>
+                        <p>As an App Designer, I'm dedicated to crafting user-centric mobile experiences that are visually stunning and intuitively functional. From wireframing to prototyping, I leverage my expertise to create seamless interfaces that enhance user engagement and satisfaction. With a focus on user experience design principles and industry best practices, I strive to deliver mobile applications that not only meet but exceed user expectations, driving success in the digital marketplace.</p>
+                    </div>
+                </div>
+               </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="script.js"></script>
 </body>
