--- a/index.html
+++ b/index.html
@@ -94,13 +94,64 @@
         </div>
     </section>
 
+    <!-- skills section start -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My creative skills & experiences.</div>
+                    <p> I have been working on many project..[to be done...]</p>
+                    <a href="#">Read more</a> <a href="https://github.com/Marnol03?tab=repositories">GitHub</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>Javascript</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Python</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Typescript</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>PostgreSQL</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line PostgreSQL"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Docker/Git/Scrum</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line mysql"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="contact" id="contact">
         <div class="max-width">
             <h2 class="title">Contact me</h2>
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>you just have to feel the formular and click on *send de Message* and I will answer within 24h</p>
+                    <p>you just have to feel the formular and click on *send Message* and I will answer within 24h</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
