--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
     </section>
 
-     <!-- services section start -->
-     <section class="services" id="services">
+    <!-- services section start -->
+    <section class="services" id="services">
         <div class="max-width">
             <h2 class="title">My services</h2>
             <div class="serv-content">
@@ -89,7 +89,7 @@
                         <p>As an App Designer, I'm dedicated to crafting user-centric mobile experiences that are visually stunning and intuitively functional. From wireframing to prototyping, I leverage my expertise to create seamless interfaces that enhance user engagement and satisfaction. With a focus on user experience design principles and industry best practices, I strive to deliver mobile applications that not only meet but exceed user expectations, driving success in the digital marketplace.</p>
                     </div>
                 </div>
-               </div>
+            </div>
             </div>
         </div>
     </section>
@@ -101,7 +101,33 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p> I have been working on many project..[to be done...]</p>
+                    <div>
+                        <div >
+                            <p>Open source Project</p>
+                            <div class="open_source">
+                                <div class="Portfolio">
+                                    <div><img src="images/profile.jpeg" alt="profile" width="100px" height="100px"></div>
+                                    <div>Portfolio</div>
+                                </div>
+                                <div class="traktshop">
+                                    <div><img src="images/trakt.png" alt="traktor" width="100px" height="100px"></div>
+                                    <div>Traktorshop</div>
+                                </div>
+                                <div class="Analytic">
+                                    <div><img src="images/trakt.png" alt="traktor" width="100px" height="100px"></div>
+                                    <div>Traktorshop</div>
+                                </div>
+                            </div>
+                            
+                        </div>
+                        <div class="mit_license">
+                            <p>MIT License</p>
+                            <div class="Portfolio">
+                                <div><img src="images/4.png" alt="GeniusReply" width="100px" height="100px"></div>
+                                <div>GeniusReply is a Thunderbird-Addons  </div>
+                            </div>
+                        </div>
+                    </div>
                     <a href="#">Read more</a> <a href="https://github.com/Marnol03?tab=repositories">GitHub</a>
                 </div>
                 <div class="column right">
