--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="column right">
                     <div class="text">I'm Marc arnol Saddefo Takoukam and I'm a <div></div><span class="typing-2"></span></div>
                     <p>I am a 21-year-old man who is passionate about programming and web development and is currently studying applied computer science. my goal is to become a full stack developer</p>
-                    <a href="#">Download CV</a>
+                    <a id="d_cv" href="#">Download CV</a>
                 </div>
             </div>
         </div>
@@ -101,34 +101,49 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <div>
+                    <div class="project">
                         <div >
                             <p>Open source Project</p>
                             <div class="open_source">
-                                <div class="Portfolio">
+                                <div class="Portfolio cart">
                                     <div><img src="images/profile.jpeg" alt="profile" width="100px" height="100px"></div>
-                                    <div>Portfolio</div>
+                                    <div>Portfolio   <br><a class="lnks" href="https://github.com/Marnol03/Portfolio">See Code</a></div>
                                 </div>
-                                <div class="traktshop">
+                                <div class="traktshop cart">
                                     <div><img src="images/trakt.png" alt="traktor" width="100px" height="100px"></div>
-                                    <div>Traktorshop</div>
+                                    <div>Traktorshop  <br><a class="lnks"  href="https://github.com/Marnol03/FlutterApp">See Code</a></div>
                                 </div>
-                                <div class="Analytic">
-                                    <div><img src="images/trakt.png" alt="traktor" width="100px" height="100px"></div>
-                                    <div>Traktorshop</div>
+                                <div class="Analytic cart">
+                                    <div><img src="images/analic.png" alt="traktor" width="100px" height="100px"></div>
+                                    <div>MyDashbord<br><a class="lnks"  href="https://github.com/Marnol03/FlutterApp">See Code</a></div>
+                                </div>
+                                <div class="Spendeconnect cart">
+                                    <div><img src="images/Spendeconnect.png" alt="traktor" width="100px" height="100px"></div>
+                                    <div>Spendeconnect <br><a class="lnks"  href="https://github.com/Marnol03/FlutterApp">See Code</a></div>
                                 </div>
                             </div>
                             
                         </div>
-                        <div class="mit_license">
+                        <br>
+                        <div >
                             <p>MIT License</p>
-                            <div class="Portfolio">
-                                <div><img src="images/4.png" alt="GeniusReply" width="100px" height="100px"></div>
-                                <div>GeniusReply is a Thunderbird-Addons  </div>
+                            <div class="mit_license">
+                                <div class="GeniusReply cart">
+                                    <div><img src="images/4.png" alt="GeniusReply" width="100px" height="100px"></div>
+                                    <div></div> <br>
+                                    <a href="https://top.pages.gitlab.rlp.net/24s/pmai/geniusreply/">Read more</a>
+                                </div>
+                                <div class="Powertrain cart">
+                                    <div><img src="images/powertrain.png" alt="GeniusReply" width="100px" height="100px"></div>
+                                    <div>Powertrain with Bosch <a href="#">more...</a></div>
+                                    
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <a href="#">Read more</a> <a href="https://github.com/Marnol03?tab=repositories">GitHub</a>
+                    <div class="git">
+                        <a href="#">Read more</a> <a href="https://github.com/Marnol03?tab=repositories">GitHub</a>
+                    </div>
                 </div>
                 <div class="column right">
                     <div class="bars">
