going forward with skills

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
                                 </div>
                                 <div class="traktshop cart">
                                     <div><img src="images/trakt.png" alt="traktor" width="100px" height="100px"></div>
-                                    <div>Traktorshop  <br><a class="lnks"  href="https://github.com/Marnol03/FlutterApp">See Code</a></div>
+                                    <div>Traktorshop  <br><a class="lnks"  href="https://github.com/Marnol03/GUI">See Code</a></div>
                                 </div>
                                 <div class="Analytic cart">
                                     <div><img src="images/analic.png" alt="traktor" width="100px" height="100px"></div>
-                                    <div>MyDashbord<br><a class="lnks"  href="https://github.com/Marnol03/FlutterApp">See Code</a></div>
+                                    <div>MyDashbord<br><a class="lnks"  href="https://github.com/Marnol03/Analytic">See Code</a></div>
                                 </div>
                                 <div class="Spendeconnect cart">
                                     <div><img src="images/Spendeconnect.png" alt="traktor" width="100px" height="100px"></div>
