--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <div class="text">My creative skills & experiences.</div>
                     <div class="project">
                         <div >
-                            <p>Open source Project</p>
+                            <p><b>Open source Project</b></p>
                             <div class="open_source">
                                 <div class="Portfolio cart">
                                     <div><img src="images/profile.jpeg" alt="profile" width="100px" height="100px"></div>
@@ -115,7 +115,7 @@
                                 </div>
                                 <div class="Analytic cart">
                                     <div><img src="images/analic.png" alt="traktor" width="100px" height="100px"></div>
-                                    <div>MyDashbord<br><a class="lnks"  href="https://github.com/Marnol03/Analytic">See Code</a></div>
+                                    <div>MyDashbord<br><a class="lnks"  href="https://github.com/Marnol03/FlutterApp">See Code</a></div>
                                 </div>
                                 <div class="Spendeconnect cart">
                                     <div><img src="images/Spendeconnect.png" alt="traktor" width="100px" height="100px"></div>
@@ -126,7 +126,7 @@
                         </div>
                         <br>
                         <div >
-                            <p>MIT License</p>
+                            <p><b>MIT License</b></p>
                             <div class="mit_license">
                                 <div class="GeniusReply cart">
                                     <div><img src="images/4.png" alt="GeniusReply" width="100px" height="100px"></div>
